src/01-app/01-app1/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: g-monitor-app1-ns
  labels:
    name: g-monitor-app1-ns
    app: g-monitor-app1-app
    project: g-monitor-project
