src/01-app/01-app1/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g-monitor-app1-service
  namespace: g-monitor-app1-ns
  labels:
    name: g-monitor-app1-service
    app: g-monitor-app1-app
    project: g-monitor-project
spec:
  ports:
    - name: main-container
      port: 8080
      targetPort: 8080
  selector:
    name: g-monitor-app1-deployment
