src/01-app/01-app1/04-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: g-monitor-app1-route
  namespace: g-monitor-app1-ns
  labels:
    name: g-monitor-app1-route
    app: g-monitor-app1-app
    project: g-monitor-project
spec:
  path: /
  to:
    kind: Service
    name: g-monitor-app1-service
    weight: 100
  port:
    targetPort: main-container
